refactor: establish Swing best practices and testability - Replace static EventBusManager with injectable ApplicationEventBus bean - Replace raw Thread in NetworkService with SwingWorker - Add done()/get() error handling to all SwingWorkers (prevent silent failures) - Introduce SendMessageAction (shared Action for button + key binding) - Replace KeyAdapter with InputMap/ActionMap key bindings - Encapsulate UserSettings behind ChatController (Law of Demeter) - Convert IncomingMessageEvent to Java 17 record - Add SLF4J/Logback logging, replace System.out.println - Restructure ChatWindow constructor into focused helper methods - Add unit tests: ChatControllerTest, UserSettingsTest, ApplicationEventBusTest